# flutter-maplibre

./: .pubignore  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  pubspec.yaml
example/android/app/: build.gradle
example/assets/geojson/: europe_1000_points.json  europe_points.json
example/integration_test/: app.dart  controller_test.dart  map_camera_test.dart  map_options_test.dart
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: callbacks_page.dart  composite_map_page.dart  flutter_map_page.dart  main.dart  menu_page.dart  performance_cartografia.dart  performance_edit_geometry_page.dart  performance_of_project_page.dart  performance_stress_test.dart  performance_stress_test_page.dart  performance_water_project_page.dart  streets_map_page.dart  style_layers_fill_extrusion_page.dart  style_layers_fill_page.dart  style_layers_heatmap_page.dart  styled_map_page.dart
example/lib/models/: geopoint.dart
example/lib/pages/: annotations_marker_page.dart  custom_menu_page.dart  layers_fill_extrusion_page.dart  login_page.dart  menu_page.dart  (+3 more)
example/linux/: CMakeLists.txt
example/test/: create_geojson.dart  create_geojson.sh
ios/: maplibre.podspec
ios/Classes/: maplibre.c
lib/: maplibre.dart  maplibre_bindings.g.dart  maplibre_bindings_generated.dart
linux/: CMakeLists.txt
macos/: maplibre.podspec
macos/Classes/: maplibre.c
src/: CMakeLists.txt  maplibre.c  maplibre.cpp  maplibre.hpp
test/shared/: annotation_app.dart
windows/: CMakeLists.txt
(+23 files in other folders)
